folder view stubs, change all tests to headless